--- a/README.Rmd
+++ b/README.Rmd
@@ -74,6 +74,21 @@ GRanges object with 56049 ranges and 5 metadata columns:
   [56049]     chrY 57215337-57215355      + |    MA0139.1   24.4754 0.00000000134    0.0216 tcgccagcagggggcgccc
 ```
 
+CTCF GRanges for other organisms
+
+```{r eval = FALSE}
+# hg19 CTCF coordinates
+download.file(url = "https://drive.google.com/uc?export=download&id=1f0QpyzJl-cguVHmXVq-h0LNP0-I5whfZ", destfile = "CTCF_hg19.RData")
+load(file = "CTCF_hg19.RData")
+# mm9 CTCF coordinates
+download.file(url = "https://drive.google.com/uc?export=download&id=1JhwQpD8HWt9ZHrw4qDS71_CuHwrkQrWB", destfile = "CTCF_mm9.RData")
+load(file = "CTCF_mm9.RData")
+# mm10 CTCF coordinates
+download.file(url = "https://drive.google.com/uc?export=download&id=1-XZ4lDweP1MUC1nU8QGXwzfr38pgUQGt", destfile = "CTCF_mm10.RData")
+load(file = "CTCF_mm10.RData")
+```
+
+
 Download the full data from the [Google Drive folder](https://drive.google.com/drive/folders/19ZXr7IETfks0OdYlmuc1Hqe700Pw3jPc?usp=sharing)
 
 See [inst/scripts/make-data.R](inst/scripts/make-data.R) how to create the CTCF 
