Specify 'predicted' CTCF binding sites

--- a/README.Rmd
+++ b/README.Rmd
@@ -19,7 +19,7 @@ knitr::opts_chunk$set(
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
 <!-- badges: end -->
 
-Genomic coordinates of CTCF binding sites with motif MA0139.1 
+Genomic coordinates of predicted CTCF binding sites with motif MA0139.1 
 (Jaspar), in BED format, with strand orientation (directionality of binding). 
 Human (hg19, hg38) and mouse (mm9, mm10) genomes. The binding sites were 
 detected using the FIMO tool of the MEME suite using default settings. 
