--- a/vignettes/CTCF.Rmd
+++ b/vignettes/CTCF.Rmd
@@ -24,7 +24,8 @@ vignette: >
 knitr::opts_chunk$set(
     collapse = TRUE,
     comment = "#>",
-    crop = NULL ## Related to https://stat.ethz.ch/pipermail/bioc-devel/2020-April/016656.html
+    crop = NULL, ## Related to https://stat.ethz.ch/pipermail/bioc-devel/2020-April/016656.html
+    warning = FALSE
 )
 ```
 
@@ -49,159 +50,105 @@ bib <- c(
 )
 ```
 
-# Basics
+`CTCF` defines an AnnotationHub resource representing genomic coordinates 
+of FIMO-predicted CTCF binding sites with motif MA0139.1 (Jaspar).
 
-`r Biocpkg("CTCF")` is  an experimental data package, to be submitted 
-as an AnnotatiohHub Bioconductor package.
+- Human (hg19, hg38) and mouse (mm9, mm10) genomes. 
+- The binding sites were detected using the FIMO tool of the MEME suite using 
+default settings. 
+- Extra columns include motif name (MA0139.1), score, p-value, q-value, and 
+the motif sequence.
 
-`r Biocpkg("CTCF")` contains genomic coordinates of predicted CTCF binding sites 
-with motif MA0139.1 (Jaspar), in BED format, with strand orientation 
-(directionality of binding). Human (hg19, hg38) and mouse (mm9, mm10) genomes. 
-The binding sites were detected using the FIMO tool of the MEME suite using 
-default settings. Extra columns include motif name (MA0139.1), score, p-value, 
-q-value, and the motif sequence.
+## Installation instructions
 
-## Install `CTCF`
+Get the latest stable `R` release from [CRAN](http://cran.r-project.org/). Then 
+install `CTCF` using from [Bioconductor](http://bioconductor.org/) the following 
+code:
 
-<!--`R` is an open-source statistical environment which can be easily modified to enhance its functionality via packages. `r Biocpkg("CTCF")` is a `R` package available via the [Bioconductor](http://bioconductor.org) repository for packages. `R` can be installed on any operating system from [CRAN](https://cran.r-project.org/) after which you can install `r Biocpkg("CTCF")` by using the following commands in your `R` session:-->
-
-```{r "install", eval = FALSE}
+```{r 'install', eval = FALSE}
 if (!requireNamespace("BiocManager", quietly = TRUE)) {
     install.packages("BiocManager")
 }
 
-BiocManager::install("mdozmorov/CTCF")
-
-## Check that you have a valid Bioconductor installation
-# BiocManager::valid()
+BiocManager::install("CTCF")
 ```
 
-## Use CTCF binding sites
+And the development version from [GitHub](https://github.com/mdozmorov/CTCF) with:
 
-```{r eval = FALSE}
-# hg38 CTCF coordinates
-download.file(url = "https://drive.google.com/uc?export=download&id=1s70dQy_zSSP8rsMa9VPEQS1DvUF-bA8o", destfile = "CTCF_hg38.RData")
-load(file = "CTCF_hg38.RData")
+```{r 'install_dev', eval = FALSE}
+BiocManager::install("mdozmorov/CTCF")
+```
+
+## Example
+
+```{r get-data}
+suppressMessages(library(AnnotationHub))
+ah <- AnnotationHub()
+query_data <- query(ah, "CTCF")
+query_data
+```
+
+The FIMO-predicted CTCF sites are named as "CTCF_<genome version abbreviation>", 
+e.g., "CTCF_hg38". Use `query_data <- query(ah , "CTCF_hg38")` for a more 
+targeted search.
+
+We can check the details about the object.
+
+```{r}
+query_data["AH95566"]
+```
+
+And retrieve the object.
+
+```{r}
+CTCF_hg38 <- query_data[["AH95566"]]
 CTCF_hg38
 ```
-```
-> CTCF_hg38
-GRanges object with 56049 ranges and 5 metadata columns:
-          seqnames            ranges strand |       motif     score       p.value   q.value            sequence
-             <Rle>         <IRanges>  <Rle> | <character> <numeric>     <numeric> <numeric>         <character>
-      [1]     chr1       11223-11241      - |    MA0139.1   24.4754 0.00000000134    0.0216 TCGCCAGCAGGGGGCGCCC
-      [2]     chr1       11281-11299      - |    MA0139.1   22.7377 0.00000001010    0.0398 GCGCCAGCAGGGGGCGCTG
-      [3]     chr1       24782-24800      - |    MA0139.1   17.3770 0.00000071100    0.2350 CGTCCAGCAGATGGCGGAT
-      [4]     chr1       91420-91438      + |    MA0139.1   16.2951 0.00000141000    0.3080 GTGGCACCAGGTGGCAGCA
-      [5]     chr1     104985-105003      - |    MA0139.1   16.7869 0.00000104000    0.2750 CCAACAGCAGGTGGCAGCC
-      ...      ...               ...    ... .         ...       ...           ...       ...                 ...
-  [56045]     chrY 57044316-57044334      - |    MA0139.1   16.4590 0.00000127000    0.2990 TGGTCACCTGGGGGCACTA
-  [56046]     chrY 57189659-57189677      + |    MA0139.1   15.7541 0.00000195000    0.3430 TGTCCTCTAGGGGTCAGCC
-  [56047]     chrY 57203409-57203427      - |    MA0139.1   15.6393 0.00000209000    0.3510 CTGCCGCAAGGGGGCGCAT
-  [56048]     chrY 57215279-57215297      + |    MA0139.1   19.5738 0.00000015300    0.1190 gcgccacgagggggcggtg
-  [56049]     chrY 57215337-57215355      + |    MA0139.1   24.4754 0.00000000134    0.0216 tcgccagcagggggcgccc
-```
 
-Note that the q-value cutoff is 0.5. Looking at the q-value distribution:
+Note that the default q-value cutoff is 0.5. Looking at the q-value distribution:
 
 ```{r echo=FALSE}
-knitr::include_graphics('../man/figures/CTCF_hg38_qvalue.png')
+knitr::include_graphics("../man/figures/CTCF_hg38_qvalue.png")
 ```
 
 one may decide to use a more stringent cutoff. E.g., filtering by q-value less than
 0.3 filters out more than half of the predicted sites. The remaining sites may be
 considered as high-confidence CTCF sites.
 
-```{r eval=FALSE}
+```{r}
+# Check length before filtering
 length(CTCF_hg38)
-# [1] 56049
-CTCF_hg38 <- CTCF_hg38[ CTCF_hg38$q.value < 0.3 ]
+# Filter and check length after filtering
+CTCF_hg38 <- CTCF_hg38[CTCF_hg38$q.value < 0.3]
 length(CTCF_hg38)
-# [1] 25474
 ```
 
-CTCF GRanges for other organisms
+
+## CTCF GRanges for other organisms
 
 ```{r eval = FALSE}
 # hg19 CTCF coordinates
-download.file(url = "https://drive.google.com/uc?export=download&id=1f0QpyzJl-cguVHmXVq-h0LNP0-I5whfZ", destfile = "CTCF_hg19.RData")
-load(file = "CTCF_hg19.RData")
+CTCF_hg19 <- query_data[["AH95565"]]
 # mm9 CTCF coordinates
-download.file(url = "https://drive.google.com/uc?export=download&id=1JhwQpD8HWt9ZHrw4qDS71_CuHwrkQrWB", destfile = "CTCF_mm9.RData")
-load(file = "CTCF_mm9.RData")
+CTCF_mm9 <- query_data[["AH95567"]]
 # mm10 CTCF coordinates
-download.file(url = "https://drive.google.com/uc?export=download&id=1-XZ4lDweP1MUC1nU8QGXwzfr38pgUQGt", destfile = "CTCF_mm10.RData")
-load(file = "CTCF_mm10.RData")
+CTCF_mm10 <- query_data[["AH95568"]]
 ```
 
 Download the full data from the [Google Drive folder](https://drive.google.com/drive/folders/19ZXr7IETfks0OdYlmuc1Hqe700Pw3jPc?usp=sharing)
 
-See [inst/scripts/make-data.R](inst/scripts/make-data.R) how to create the CTCF 
+See [../inst/scripts/make-data.R](inst/scripts/make-data.R) how to create the CTCF 
 GRanges objects.
 
 
-<!--
-## Required knowledge
+## Citation
 
-`r Biocpkg("CTCF")` is based on many other packages and in particular in those that have implemented the infrastructure needed for dealing with RNA-seq data (EDIT!). That is, packages like `r Biocpkg("SummarizedExperiment")` (EDIT!).
+Below is the citation output from using `citation('CTCF')` in R. Please
+run this yourself to check for any updates on how to cite __CTCF__.
 
-If you are asking yourself the question "Where do I start using Bioconductor?" you might be interested in [this blog post](http://lcolladotor.github.io/2014/10/16/startbioc/#.VkOKbq6rRuU).
-
-## Asking for help
-
-As package developers, we try to explain clearly how to use our packages and in which order to use the functions. But `R` and `Bioconductor` have a steep learning curve so it is critical to learn where to ask for help. The blog post quoted above mentions some but we would like to highlight the [Bioconductor support site](https://support.bioconductor.org/) as the main resource for getting help: remember to use the `CTCF` tag and check [the older posts](https://support.bioconductor.org/t/CTCF/). Other alternatives are available such as creating GitHub issues and tweeting. However, please note that if you want to receive help you should adhere to the [posting guidelines](http://www.bioconductor.org/help/support/posting-guide/). It is particularly critical that you provide a small reproducible example and your session information so package developers can track down the source of the error.
-
-## Citing `CTCF`
-
-We hope that `r Biocpkg("CTCF")` will be useful for your research. Please use the following information to cite the package and the overall approach. Thank you!
-
-```{r "citation"}
-## Citation info
-citation("CTCF")
+```{r 'citation', eval = requireNamespace('CTCF')}
+print(citation("CTCF"), bibtex = TRUE)
 ```
-
-# Quick start to using to `CTCF`
-
-```{r "start", message=FALSE}
-library("CTCF")
-```
-
-Edit this as you see fit =)
-
-Here is an example of you can cite your package inside the vignette:
-
-* `r Biocpkg("CTCF")` `r Citep(bib[["CTCF"]])`
-
-
-
-# Reproducibility
-
-The `r Biocpkg("CTCF")` package `r Citep(bib[["CTCF"]])` was made possible thanks to:
-
-* R `r Citep(bib[["R"]])`
-* `r Biocpkg("BiocStyle")` `r Citep(bib[["BiocStyle"]])`
-* `r CRANpkg("knitr")` `r Citep(bib[["knitr"]])`
-* `r CRANpkg("RefManageR")` `r Citep(bib[["RefManageR"]])`
-* `r CRANpkg("rmarkdown")` `r Citep(bib[["rmarkdown"]])`
-* `r CRANpkg("sessioninfo")` `r Citep(bib[["sessioninfo"]])`
-* `r CRANpkg("testthat")` `r Citep(bib[["testthat"]])`
-
-This package was developed using `r BiocStyle::Biocpkg("biocthis")`.
-
-
-Code for creating the vignette
-
-```{r createVignette, eval=FALSE}
-## Create the vignette
-library("rmarkdown")
-system.time(render("CTCF.Rmd", "BiocStyle::html_document"))
-
-## Extract the R code
-library("knitr")
-knit("CTCF.Rmd", tangle = TRUE)
-```
--->
-
 
 Date the vignette was generated.
 
