--- a/README.Rmd
+++ b/README.Rmd
@@ -1,5 +1,7 @@
 ---
 output: github_document
+editor_options: 
+  chunk_output_type: console
 ---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
@@ -15,24 +17,39 @@ knitr::opts_chunk$set(
 
 # CTCF
 
-<!-- badges: start -->
+<!-- badges: start
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
-<!-- badges: end -->
+badges: end -->
 
 `CTCF` defines an AnnotationHub resource representing genomic coordinates 
-of [FIMO](https://meme-suite.org/meme/doc/fimo.html)-predicted CTCF binding sites 
-with human CTCF motif [MA0139.1](http://jaspar.genereg.net/matrix/MA0139.1/) (Jaspar2022).
+of [FIMO](https://meme-suite.org/meme/doc/fimo.html)-predicted CTCF binding 
+sites for human and mouse genomes, including the 
+[Telomere-to-Telomere](https://github.com/marbl/CHM13) and [mm39](http://genomeref.blogspot.com/2020/07/grcm39-new-mouse-reference-genome.html)
+genome assemblies. It also includes experimentally defined CTCF-bound 
+cis-regulatory elements from [ENCODE SCREEN](https://screen.encodeproject.org/).
 
-- Human (hg19, hg38) and mouse (mm9, mm10) genomes. 
-- The binding sites were detected using the FIMO tool of the MEME suite using 
-default settings. 
-- Extra columns include motif name (MA0139.1), score, p-value, q-value, and 
-the motif sequence.
+TL;DR - for human hg38 genome assembly, use `hg38.MA0139.1.RData` ("AH104729"). 
+For mouse mm10 genome assembly, use `mm10.MA0139.1.RData` ("AH104755").
+For [ENCODE SCREEN](https://screen.encodeproject.org/) data, use 
+`hg38.SCREEN.GRCh38_CTCF.RData` ("AH104730") or `mm10.SCREEN.mm10_CTCF.RData`
+("AH104756") objects.
+
+The CTCF GRanges are named as `<assembly>.<Database>`. The FIMO-predicted data
+includes extra columns with motif name, score, p-value, q-value, and the motif 
+sequence.
 
 ## Installation instructions
 
+**Please, note that the updated CTCF objects will be available in 
+Bioconductor/AnnotationHub 3.16.** To test the following code, use the 
+`bioconductor::devel` Docker image. Run:
+```{bash eval=FALSE}
+docker run -e PASSWORD=password -p 8787:8787 -d --rm -v $(pwd):/home/rstudio bioconductor/bioconductor_docker:devel
+```
+Open http://localhost:8787 and login using `rstudio/password` credentials.
+
 Get the latest stable `R` release from [CRAN](http://cran.r-project.org/). Then 
-install `CTCF` using from [Bioconductor](http://bioconductor.org/) the following 
+install `CTCF` from [Bioconductor](http://bioconductor.org/) using the following 
 code:
 
 ```{r 'install', eval = FALSE}
@@ -40,7 +57,7 @@ if (!requireNamespace("BiocManager", quietly = TRUE)) {
     install.packages("BiocManager")
 }
 
-BiocManager::install("CTCF")
+BiocManager::install("CTCF") # Use version = "devel" for the latest version
 ```
 
 ## Example
@@ -48,59 +65,103 @@ BiocManager::install("CTCF")
 ```{r get-data}
 suppressMessages(library(AnnotationHub))
 ah <- AnnotationHub()
-query_data <- query(ah, "CTCF")
+query_data <- subset(ah, preparerclass=="CTCF")
+# Explore the AnnotationHub object
 query_data
+# Get the list of data providers
+query_data$dataprovider %>% unique
 ```
 
-The FIMO-predicted CTCF sites are named as "CTCF_<genome version abbreviation>", 
-e.g., "CTCF_hg38". Use `query_data <- query(ah , "CTCF_hg38")` for a more 
-targeted search.
-
-We can check the details about the object.
+We can find CTCF sites identified using JASPAR 2022 database in hg38 human genome
 
 ```{r}
-query_data["AH95566"]
+subset(query_data, species == "Homo sapiens" & 
+                   genome == "hg38" & 
+                   dataprovider == "JASPAR 2022")
+# Same for mm10 mouse genome
+# subset(query_data, species == "Mus musculus" & genome == "mm10" & dataprovider == "JASPAR 2022")
 ```
 
-And retrieve the object.
+The `hg38.JASPAR2022_CORE_vertebrates_non_redundant_v2.RData` object contains 
+CTCF sites detected using the
+[all three CTCF PWMs](https://jaspar.genereg.net/search?q=CTCF&collection=all&tax_group=all&tax_id=9606&type=all&class=all&family=all&version=all).
+The `hg38.MA0139.1.RData` object contains CTCF sites detected using the most
+popular [MA0139.1](https://jaspar.genereg.net/matrix/MA0139.1/) CTCF PWM. 
+To retrieve it, we'll use:
 
 ```{r}
-CTCF_hg38 <- query_data[["AH95566"]]
+CTCF_hg38 <- query_data[["AH104729"]]
 CTCF_hg38
 ```
 
-Note that the default q-value cutoff is 0.5. Looking at the q-value distribution:
+Note that the [FIMO](https://meme-suite.org/meme/doc/fimo.html) tool detects 
+CTCF binding sites using the 1e-4 p-value threshold by default (the more significant
+p-value corresponds to the more confidently detected CTCF motif). We found that
+this threshold is too permissive. Using the 
+[ENCODE SCREEN](https://screen.encodeproject.org/) database as ground truth,
+we found 1e-6 as the optimal threshold providing approximately 80% true positive
+rate. 
 
 ```{r echo=FALSE}
-knitr::include_graphics("man/figures/CTCF_hg38_qvalue.png")
+knitr::include_graphics("man/figures/Figure_human_pvalues_threshold.png")
 ```
 
-one may decide to use a more stringent cutoff. E.g., filtering by q-value less than
-0.3 filters out more than half of the predicted sites. The remaining sites may be
-considered as high-confidence CTCF sites.
+To filter the GRanges object and keep high-confidence CTCF sites, use:
 
 ```{r}
+suppressMessages(library(plyranges))
 # Check length before filtering
-length(CTCF_hg38)
+print(paste("Number of CTCF motifs at the default 1e-4 threshold:", length(CTCF_hg38)))
 # Filter and check length after filtering
-CTCF_hg38 <- CTCF_hg38[CTCF_hg38$q.value < 0.3]
-length(CTCF_hg38)
+CTCF_hg38_filtered <- CTCF_hg38 %>% plyranges::filter(pvalue < 1e-6)
+print(paste("Number of CTCF motifs at the 1e-6 threshold:", length(CTCF_hg38_filtered)))
+```
+
+We also recommend merging overlapping CTCF motifs. Overlapping motifs frequently
+occur when using several PWMs (e.g., three PWMs from JASPAR 2022 used to create
+`hg38.JASPAR2022_CORE_vertebrates_non_redundant_v2.RData` ). 
+
+```{r}
+CTCF_hg38_filtered_reduced <- CTCF_hg38_filtered %>% plyranges::reduce_ranges()
+print(paste("Number of CTCF motifs at the 1e-6 threshold AND reduced:", length(CTCF_hg38_filtered_reduced)))
 ```
 
 
-## CTCF GRanges for other organisms
+# CTCF Position Weight Matrices
 
-```{r eval = FALSE}
-# hg19 CTCF coordinates
-CTCF_hg19 <- query_data[["AH95565"]]
-# mm9 CTCF coordinates
-CTCF_mm9 <- query_data[["AH95567"]]
-# mm10 CTCF coordinates
-CTCF_mm10 <- query_data[["AH95568"]]
+**CTCF PWM information.** "Motif" - individual motif IDs or the total number of motifs per database; "Length" - motif length of the range of lengths; "URL" - direct links to motif pages. Jaspar, Hocomoco, Jolma 2013 PWMs were downloaded from the [MEME database](https://meme-suite.org/meme/doc/download.html).
+
+```{r echo=FALSE}
+mtx <- read.csv("man/tables/Table_PWMs.csv")
+knitr::kable(mtx)
 ```
 
-See [inst/scripts/make-data.R](inst/scripts/make-data.R) how to create the CTCF 
-GRanges objects.
+**CTCF motif logos.** PWMs from (A) MEME, (B) CTCFBSDB, (C) CIS-BP human, and (D) CIS-BP mouse databases. Clustering and alignment of motifs was performed using the `r `BiocStyle::Biocpkg("motifStack")` R package.
+
+```{r echo=FALSE}
+knitr::include_graphics("man/figures/Supplementary_Figure_1.png")
+```
+
+See [inst/scripts/make-data.R](inst/scripts/make-data.R) how the CTCF GRanges 
+objects were created.
+
+# CTCF predicted and experimental data
+
+**Predefined CTCF binding data.** "Database" - source of data; "Number" - number of binding sites; "Assembly" - genome assembly; "URL" - direct link to data download.
+
+```{r echo=FALSE}
+mtx <- read.csv("man/tables/Table_Predefined.csv")
+knitr::kable(mtx)
+```
+
+# All GRanges objects included in the package
+
+**Summary of CTCF binding data provided in the package.** CTCF sites for each genome assembly and PWM combination were detected using FIMO. "ID" - object names formatted as `<assembly>.<database name>`; "Assembly" - genome assembly, T2T - telomere to telomere (GCA_009914755.4) genome assembly; "All (p-value threshold Xe-Y)" - the total number of CTCF binding sites in the corresponding BED file at the Xe-Y threshold; "Non-overlapping (p-value threshold Xe-Y)" - number of non-overlapping CTCF binding sites (overlapping regions are merged) at the Xe-Y threshold.
+
+```{r echo=FALSE}
+mtx <- read.csv("man/tables/Table_log.csv")
+knitr::kable(mtx)
+```
 
 
 ## Citation
