--- a/vignettes/CTCF.Rmd
+++ b/vignettes/CTCF.Rmd
@@ -65,14 +65,14 @@ Get the latest stable `R` release from [CRAN](http://cran.r-project.org/). Then
 install `r BiocStyle::Biocpkg('AnnotationHub')` from [Bioconductor](http://bioconductor.org/) 
 using the following code:
 
-```{r 'install', eval = FALSE}
+```{r 'install', eval = TRUE}
 if (!requireNamespace("BiocManager", quietly = TRUE)) {
     install.packages("BiocManager")
 }
-BiocManager::install("AnnotationHub") 
+BiocManager::install("AnnotationHub", update = FALSE) 
 # Additional packages
-BiocManager::install("GenomicRanges")
-BiocManager::install("plyranges")
+BiocManager::install("GenomicRanges", update = FALSE)
+BiocManager::install("plyranges", update = FALSE)
 ```
 
 ## Example
